...
            android:layout_marginBottom="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Full Name -->
        <EditText
            android:id="@+id/inputFullName"
            android:hint="Enter your Full Name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp" />

        <!-- Email -->
        <EditText
            android:id="@+id/inputEmail"
            android:hint="Enter your Email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp" />

        <!-- Phone Number -->
        <EditText
            android:id="@+id/inputPhone"
            android:hint="Enter your Phone Number"
            android:inputType="phone"
            android:maxLength="15"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp" />

        <!-- Password -->
        <EditText
            android:id="@+id/inputPassword"
            android:hint="Create a Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp" />

        <!-- Confirm Password -->
        <EditText
            android:id="@+id/inputConfirmPassword"
            android:hint="Confirm your Password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="12dp" />

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            >

            <RadioButton
                android:id="@+id/radioEntrant"
                android:text="Entrant"
                android:checked="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp" />

...
        </RadioGroup>

        <!-- Terms Checkbox -->

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/btnSignUp"
            android:text="Sign Up"
            android:backgroundTint="@color/green2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
...
