...
        android:hint="Name"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter Name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

...
        android:paddingVertical="8dp"
        android:layout_marginTop="8dp"
        android:hint="Email"
        app:layout_constraintTop_toBottomOf="@id/role_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="example@gmail.com"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintBottom_toBottomOf="@id/location_label"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Edit Profile -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="12dp"
        android:text="Save Profile Changes"
...
        app:layout_constraintTop_toBottomOf="@id/location_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Delete Profile -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/system_error_500"
        android:paddingVertical="12dp"
...
