...
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="Profile" />

        <item android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_logo"
            android:title="Notifications" />
...
            android:title="Manage Events" />

        <item android:id="@+id/nav_site_criteria"
            android:icon="@drawable/ic_site"
            android:title="Site Criteria" />

        <item android:id="@+id/nav_signout"
            android:icon="@drawable/ic_signout"
            android:title="Sign Out" />
    </group>
</menu>

