...
                android:text="Cancel"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/green3"
                app:cornerRadius="5dp"
                app:layout_constraintEnd_toStartOf="@+id/confirm_delete_button"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_delete_button"
...
